--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node: [18, 20, 22]
-        arch: [x64]
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }} / Node ${{ matrix.node }} ${{ matrix.arch }}
+    name: ${{ matrix.os }} / Node ${{ matrix.node }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,7 +17,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
-          architecture: ${{ matrix.arch }}
       - name: Install
         run: npm install
       - name: Test
