--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "prebuild-install modified for hadron",
   "scripts": {
     "test": "standard && hallmark && tape test/*-test.js",
-    "hallmark": "hallmark --fix"
+    "hallmark": "hallmark --fix",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "prebuilt",
